Issue #1395 - Fix buttons alignment + add tooltip to separator variations

--- a/assets/scss/molecules/forms/_custom-checkbox.scss
+++ b/assets/scss/molecules/forms/_custom-checkbox.scss
@@ -8,7 +8,6 @@
 
     @include breakpoint(large down) {
         padding: 15px 20px 15px 0;
-        border-bottom: 1px solid rgba($black, 0.10);
     }
 
     &:not(.displays-inline) {
